jerry/backups/jerry/dao_workspace/.screen_capture.txt
~/dao/dao_workspace $ python missile_defense.py
python: can't open file '/data/data/com.termux/files/home/dao/dao_workspace/missile_defense.py': [Errno 2] No such file or directory
~/dao/dao_workspace $ ^C
~/dao/dao_workspace $ python missile_defense.py
python: can't open file '/data/data/com.termux/files/home/dao/dao_workspace/missile_defense.py': [Errno 2] No such file or directory
~/dao/dao_workspace $ ^C
~/dao/dao_workspace $ python3 missile_defense.py
python3: can't open file '/data/data/com.termux/files/home/dao/dao_workspace/missile_defense.py': [Errno 2] No such file or directory
~/dao/dao_workspace $ ^C
~/dao/dao_workspace $ python3 /data/data/com.termux/files/home/dao/dao_workspace/programs/games/missile_defense.py
  File "/data/data/com.termux/files/home/dao/dao_workspace/programs/games/missile_defense.py", line 20
    self.player_x = max(5, self.stdscr.getmaxyx()[1] - 15)
                                                          ^
IndentationError: unindent does not match any outer indentation level
~/dao/dao_workspace $ 




